# html-elements-showcase

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: deploy.yml
data/examples/: <a>.html  <abbr>.html  <address>.html  <audio>.html  <b>.html  <blockquote>.html  <br>.html  <canvas>.html  <cite>.html  <code>.html  <del>.html  <details>.html  <dfn>.html  <dialog>.html  <dl>.html  <em>.html  <figure>.html  <form>.html  <hgroup>.html  <i>.html  <iframe>.html  <img>.html  <ins>.html  <kbd>.html  <mark>.html  <math>.html  <meter>.html  <object>.html  <ol>.html  <output>.html  <p>.html  <pre>.html  <progress>.html  <q>.html  <s>.html  <samp>.html  <small>.html  <strong>.html  <sub>.html  <sup>.html  (+7 more)
src/html_elements_showcase/: __init__.py  build.py  configuration.py  data_transfer.py  data_transfer_objects.py  fetch.py  parse.py  render.py  sanitize.py  transfer.py
src/html_elements_showcase/templates/: attribution.html.jinja  base.html.jinja  section.html.jinja
