[project]
name = "html-elements-showcase"
version = "0.1.0"
description = "A showcase of HTML elements"
readme = "README.md"
authors = [
    { name = "benj9000", email = "49900294+benj9000@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
html-elements-showcase = "html_elements_showcase:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
