[project]
name = "html-elements-showcase"
version = "0.1.0"
description = "A showcase of HTML elements"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.md"]
authors = [
    { name = "benj9000", email = "49900294+benj9000@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = ["beautifulsoup4>=4.13.3", "jinja2>=3.1.5", "requests>=2.32.3"]

[project.scripts]
html-elements-showcase = "html_elements_showcase:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
venvPath = "."
venv = "venv"
include = ["./src"]
